traefik/custom-errors/errors-404-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: errors-404

spec:
  errors:
    status:
      - "404"
    query: "/{status}"
    service:
      name: custom-errors
      namespace: traefik
