traefik/custom-errors/errors-5xx-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: errors-5xx

spec:
  errors:
    status:
      - "502"
      - "503"
    query: "/{status}"
    service:
      name: custom-errors
      namespace: traefik
