traefik/custom-errors/errors-404-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: errors-404

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`{any:.*}`)
      priority: 1
      # 1. Normal request goes to custom-errors service
      # 2. "custom-errors" service returns 404 status
      # 3. traefik "errors-404" middleware requests "custom-errors" service with "/404" path
      # 4. Error page is returned
      middlewares:
        - name: errors-404
      services:
        - kind: Service
          namespace: traefik
          name: custom-errors
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
